--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -14,6 +14,8 @@
 
   <main class="app">
 
+    <h1 class="main-title">Buscador de series</h1>
+
     <partial src="_search-form.html"></partial>
     <partial src="_search-results.html"></partial>
 
