--- a/_src/templates/partials/_search-form.html
+++ b/_src/templates/partials/_search-form.html
@@ -1,3 +1,10 @@
 <section class="app__search-form">
-    
+    <form action="" class="search-form">
+
+        <label for="search-bar">Busca una serie</label>
+        <input type="text" name="search-bar" id="search-bar" class="search-bar" value="nota">
+
+        <input type="submit" value="Buscar">
+
+    </form>
 </section>
