Create search results html

--- a/_src/templates/partials/_search-form.html
+++ b/_src/templates/partials/_search-form.html
@@ -1,7 +1,7 @@
 <section class="app__search-form">
     <form action="" class="search-form">
 
-        <label for="search-bar">Busca una serie</label>
+        <label for="search-bar" class="search-bar__label">Busca una serie</label>
         <input type="text" name="search-bar" id="search-bar" class="search-bar" value="nota">
 
         <input type="submit" value="Buscar">
