--- a/_src/templates/partials/_search-form.html
+++ b/_src/templates/partials/_search-form.html
@@ -4,7 +4,7 @@
         <label for="search-bar" class="search-bar__label">Busca una serie</label>
         <input type="text" name="search-bar" id="search-bar" class="search-bar" value="nota">
 
-        <input type="submit" value="Buscar">
+        <input type="submit" value="Buscar" class="submit-btn">
 
     </form>
 </section>
