Remove parseInt in several places (it doesn't work). Improve syntax in localStorage lines

--- a/_src/templates/partials/_search-form.html
+++ b/_src/templates/partials/_search-form.html
@@ -2,7 +2,7 @@
     <form action="" class="search-form">
 
         <label for="search-bar" class="search-bar__label">Busca una serie</label>
-        <input type="text" name="search-bar" id="search-bar" class="search-bar" value="nota">
+        <input type="text" name="search-bar" id="search-bar" class="search-bar" placeholder="Ex: Game of Thrones">
 
         <input type="submit" value="Buscar" class="submit-btn">
 
