Change favicon. Change site language. Change html structure. Start creating sass variables

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Buscador de series</title>
-  <link rel="icon" href="favicon.png" />
+  <title>TV shows browser</title>
+  <link rel="icon" href="favicon-32x32.png" />
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
 
-  <main class="app">
+  <partial src="_header.html"></partial>
 
-    <h1 class="main-title">Buscador de series</h1>
+  <main class="app">
 
     <partial src="_search-form.html"></partial>
     <partial src="_search-results.html"></partial>
