--- a/_src/templates/partials/_search-form.html
+++ b/_src/templates/partials/_search-form.html
@@ -1,10 +1,10 @@
 <section class="app__search-form">
     <form action="" class="search-form">
 
-        <label for="search-bar" class="search-bar__label">Busca una serie</label>
+        <label for="search-bar" class="search-bar__label">Enter a TV show's name</label>
         <input type="text" name="search-bar" id="search-bar" class="search-bar" placeholder="Ex: Game of Thrones">
 
-        <input type="submit" value="Buscar" class="submit-btn">
+        <input type="submit" value="Go!" class="submit-btn">
 
     </form>
 </section>
