--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TV shows browser</title>
   <link rel="icon" href="favicon-32x32.png" />
+  <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600,700|Major+Mono+Display|Questrial" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
