--- a/_src/templates/partials/_search-form.html
+++ b/_src/templates/partials/_search-form.html
@@ -1,10 +1,12 @@
 <section class="app__search-form">
-    <form action="" class="search-form">
+  <form action="" class="search-form">
 
-        <label for="search-bar" class="search-bar__label">Enter a TV show's name</label>
-        <input type="text" name="search-bar" id="search-bar" class="search-bar" placeholder="Ex: Game of Thrones">
+    <div class="search-bar__container">
+      <label for="search-bar" class="search-bar__label">Enter a TV show's name</label>
+      <input type="text" name="search-bar" id="search-bar" class="search-bar__input" placeholder="Ex: Game of Thrones">
+    </div>
 
-        <input type="submit" value="Go!" class="submit-btn">
+    <input type="submit" value="Go!" class="submit-btn">
 
-    </form>
+  </form>
 </section>
