--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -8,5 +8,13 @@
 }
 
 body {
+	width: 100%;
+	height: 100vh;
 	margin: 0;
+	font-family: $font-family-primary;
+	font-size: $font-size;
+	font-weight: $font-weight-regular;
+	line-height: 1.5;
+	color: $color-dark-midtone;
+	background-color: $color-light;
 }
