--- a/_src/assets/scss/pages/_search-form.scss
+++ b/_src/assets/scss/pages/_search-form.scss
@@ -13,6 +13,31 @@
     flex-direction: column;
 }
 
+.search-bar__label {
+    font-weight: $font-weight-semibold;
+}
+
+.search-bar__input {
+    width: 200px;
+    padding: 5px 5px 5px 0;
+    border: none;
+    border-bottom: 1px solid grey;
+    font-family: $font-family-secondary;
+    &:focus {
+        outline: none;
+        border-bottom: 2px solid $color-midtone;
+    }
+}
+
 .submit-btn {
+    width: 50px;
+    margin-left: 20px;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: $color-midtone;
+    color: $color-light;
+    font-weight: $font-weight-semibold;
     align-self: flex-end;
+    cursor: pointer;
 }
