--- a/_src/assets/scss/pages/_search-results.scss
+++ b/_src/assets/scss/pages/_search-results.scss
@@ -1,3 +1,13 @@
+.results__list {
+    width: 100%;
+    margin: 0;
+    padding: 20px;
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+
 .results__item {
     background-color: pink;
 }
