Finish styles for desktop version

--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -8,9 +8,12 @@ $color-dark: #0D5C63;
 
 // Fonts
 
-$font-family-title: 'Major Mono Display', monospace;
-$font-family-primary: 'Questrial', sans-serif;
-$font-family-secondary: 'Dosis', sans-serif;
+$font-family-title: 'Major Mono Display',
+monospace;
+$font-family-primary: 'Questrial',
+sans-serif;
+$font-family-secondary: 'Dosis',
+sans-serif;
 $font-size: 16px;
 $font-weight-regular: 400;
 $font-weight-medium: 500;
