--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -1,23 +1,28 @@
 .header {
-    width: 100%;
-    background-color: $color-dark;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  background-color: $color-dark;
+  display: flex;
+  justify-content: center;
+}
+
+.header__container {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 .logo__container {
-    width: 100px;
-    height: 100px;
+  width: 100px;
+  height: 100px;
 }
 
 .logo__image {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .main-title {
-    margin: 0 0 0 20px;
-    font-family: $font-family-title;
-    color: $color-light;
+  margin: 0 0 0 20px;
+  font-family: $font-family-title;
+  color: $color-light;
 }
