--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -22,7 +22,7 @@
 
   </main>
 
-  <script src="assets/js/main.js"></script>
+  <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 
 </html>
