--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,7 +1,9 @@
 <header class="header">
+  <a href="index.html" class="header__container">
     <div class="logo__container">
-        <img src="assets/images/tv-show.png" alt="Site logo" class="logo__image">
+      <img src="assets/images/tv-show.png" alt="Site logo" class="logo__image">
     </div>
 
     <h1 class="main-title">TV shows browser</h1>
+  </a>
 </header>
